--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/support": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^3.8|^4.0|^5.0",
+        "illuminate/support": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0",
         "kblais/laravel-uuid": "^1.4",
         "ramsey/uuid": "^4.1",
         "tucker-eric/eloquentfilter": "^3.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "orchestra/testbench": "^3.8|^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -48,6 +48,11 @@
             "email": "dennissmink@gmail.com",
             "homepage": "http://www.dennissmink.nl",
             "role": "Owner"
+        },
+        {
+            "name": "Guss Rw",
+            "email": "gussrw1@gmail.com",
+            "role": "Collaborator"
         }
     ]
 }
